--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -679,6 +679,42 @@ body.high-contrast .btn-white:hover  {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
+
+body.high-contrast .btn-secondary  {
+  color: #fff; 
+}
+.btn-secondary {
+  display: flex;
+  height: 3rem;
+  align-items: center;
+  justify-content: center;
+  gap: 0.66606rem;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 156 188 / var(--tw-bg-opacity, 1));
+  padding-left: 1.96688rem;
+  padding-right: 1.96688rem;
+  padding-top: 0.99906rem;
+  padding-bottom: 0.99906rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body.high-contrast .btn-secondary:hover  {
+  color: #fff; 
+}
+.btn-secondary:hover {
+  background-color: rgb(20 156 188 / 0.8);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
 /* --- HERO EN MODO ALTO CONTRASTE --- */
 body.high-contrast .bg-primary,
 body.high-contrast .accesible-seccion,
@@ -1051,6 +1087,20 @@ body.high-contrast .comment-form input#submit  {
 .comment-form input#submit {
   line-height: 1.25rem;
 }
+.bg-scooter {
+    background-image: url('../images/commons/bg-scooter.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+@media (max-width: 1023px) {
+    .bg-scooter {
+        background-image: url('../images/commons/bg-scooter-mobile.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+      }
+  }
 .sr-only {
   position: absolute;
   width: 1px;
@@ -1251,6 +1301,9 @@ body.high-contrast .comment-form input#submit  {
 .inline-block {
   display: inline-block;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
@@ -1328,6 +1381,9 @@ body.high-contrast .comment-form input#submit  {
 }
 .max-h-\[297px\] {
   max-height: 297px;
+}
+.min-h-\[30rem\] {
+  min-height: 30rem;
 }
 .min-h-\[30vh\] {
   min-height: 30vh;
@@ -2007,6 +2063,12 @@ body.high-contrast .comment-form input#submit  {
 .tracking-\[0\.03px\] {
   letter-spacing: 0.03px;
 }
+.tracking-\[0\.045rem\] {
+  letter-spacing: 0.045rem;
+}
+.tracking-\[0\.08719rem\] {
+  letter-spacing: 0.08719rem;
+}
 .tracking-wide {
   letter-spacing: 0.025em;
 }
@@ -2146,35 +2208,29 @@ body.high-contrast .comment-form input#submit  {
 
 @import './fonts.css';
 
-
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
-
 
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
-
 .hover\:bg-secondary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(20 156 188 / var(--tw-bg-opacity, 1));
 }
 
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
-
 
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-
 
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -2182,17 +2238,14 @@ body.high-contrast .comment-form input#submit  {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-
 .focus\:ring-white:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
 }
 
-
 .focus\:ring-white\/50:focus {
   --tw-ring-color: rgb(255 255 255 / 0.5);
 }
-
 
 .focus-visible\:ring-2:focus-visible {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -2200,39 +2253,32 @@ body.high-contrast .comment-form input#submit  {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-
 .focus-visible\:ring-primary:focus-visible {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(251 133 0 / var(--tw-ring-opacity, 1));
 }
 
-
 .focus-visible\:ring-offset-2:focus-visible {
   --tw-ring-offset-width: 2px;
 }
 
-
 .group:hover .group-hover\:visible {
   visibility: visible;
 }
-
 
 .group:hover .group-hover\:translate-y-0 {
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-
 .group:hover .group-hover\:rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
-
 
 .group:hover .group-hover\:shadow-\[0_10px_25px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
   --tw-shadow: 0 10px 25px rgba(0,0,0,0.25);
@@ -2240,13 +2286,11 @@ body.high-contrast .comment-form input#submit  {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-
 .group:focus-visible .group-focus-visible\:shadow-\[0_10px_25px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
   --tw-shadow: 0 10px 25px rgba(0,0,0,0.25);
   --tw-shadow-colored: 0 10px 25px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
 
 @media (min-width: 640px) {
 
@@ -2254,7 +2298,6 @@ body.high-contrast .comment-form input#submit  {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
-
 
 @media (min-width: 768px) {
 
@@ -2304,6 +2347,14 @@ body.high-contrast .comment-form input#submit  {
 
   .md\:h-\[235px\] {
     height: 235px;
+  }
+
+  .md\:min-h-\[55rem\] {
+    min-height: 55rem;
+  }
+
+  .md\:min-h-\[60rem\] {
+    min-height: 60rem;
   }
 
   .md\:w-96 {
@@ -2378,8 +2429,17 @@ body.high-contrast .comment-form input#submit  {
   .md\:text-right {
     text-align: right;
   }
-}
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
 
 @media (min-width: 1024px) {
 
@@ -2432,6 +2492,10 @@ body.high-contrast .comment-form input#submit  {
     display: inline-block;
   }
 
+  .lg\:inline {
+    display: inline;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -2446,6 +2510,10 @@ body.high-contrast .comment-form input#submit  {
 
   .lg\:h-48 {
     height: 12rem;
+  }
+
+  .lg\:min-h-\[28rem\] {
+    min-height: 28rem;
   }
 
   .lg\:min-h-\[50vh\] {
@@ -2480,6 +2548,10 @@ body.high-contrast .comment-form input#submit  {
     width: 30%;
   }
 
+  .lg\:w-\[52rem\] {
+    width: 52rem;
+  }
+
   .lg\:w-\[70\%\] {
     width: 70%;
   }
@@ -2490,6 +2562,18 @@ body.high-contrast .comment-form input#submit  {
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:w-\[50rem\] {
+    width: 50rem;
+  }
+
+  .lg\:w-\[45rem\] {
+    width: 45rem;
+  }
+
+  .lg\:w-\[48rem\] {
+    width: 48rem;
   }
 
   .lg\:max-w-2xl {
@@ -2516,6 +2600,10 @@ body.high-contrast .comment-form input#submit  {
     flex-direction: row;
   }
 
+  .lg\:items-end {
+    align-items: flex-end;
+  }
+
   .lg\:items-center {
     align-items: center;
   }
@@ -2536,6 +2624,10 @@ body.high-contrast .comment-form input#submit  {
     gap: 0px;
   }
 
+  .lg\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .lg\:border {
     border-width: 1px;
   }
@@ -2543,6 +2635,10 @@ body.high-contrast .comment-form input#submit  {
   .lg\:border-color6 {
     --tw-border-opacity: 1;
     border-color: rgb(192 192 192 / var(--tw-border-opacity, 1));
+  }
+
+  .lg\:p-8 {
+    padding: 2rem;
   }
 
   .lg\:px-0 {
@@ -2606,6 +2702,10 @@ body.high-contrast .comment-form input#submit  {
     text-align: left;
   }
 
+  .lg\:text-right {
+    text-align: right;
+  }
+
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2645,12 +2745,10 @@ body.high-contrast .comment-form input#submit  {
   }
 }
 
-
 .\[\&\>p\]\:text-xl>p {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-
 
 .\[\&\>p\]\:text-color5>p {
   --tw-text-opacity: 1;
