--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -939,7 +939,7 @@ body.high-contrast button,
     line-height: 1.6;
   }
 .descripcion img {
-    width: 100%;
+    width: auto;
     height: auto;
     display: block;
     border-radius: 0.625rem;
@@ -1288,6 +1288,9 @@ body.high-contrast .comment-form input#submit  {
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mt-auto {
+  margin-top: auto;
 }
 .line-clamp-2 {
   overflow: hidden;
@@ -1670,16 +1673,15 @@ body.high-contrast .comment-form input#submit  {
 .rounded-full {
   border-radius: 9999px;
 }
+.rounded-lg {
+  border-radius: 0.5rem;
+}
 .rounded-xl {
   border-radius: 0.75rem;
 }
 .rounded-b-\[0\.625rem\] {
   border-bottom-right-radius: 0.625rem;
   border-bottom-left-radius: 0.625rem;
-}
-.rounded-b-none {
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
 }
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
@@ -1751,6 +1753,10 @@ body.high-contrast .comment-form input#submit  {
 }
 .border-color6\/30 {
   border-color: rgb(192 192 192 / 0.3);
+}
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
 }
 .border-secondary {
   --tw-border-opacity: 1;
@@ -1899,10 +1905,6 @@ body.high-contrast .comment-form input#submit  {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -2100,6 +2102,10 @@ body.high-contrast .comment-form input#submit  {
   --tw-text-opacity: 1;
   color: rgb(77 75 75 / var(--tw-text-opacity, 1));
 }
+.text-color6 {
+  --tw-text-opacity: 1;
+  color: rgb(192 192 192 / var(--tw-text-opacity, 1));
+}
 .text-color7 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
@@ -2111,6 +2117,10 @@ body.high-contrast .comment-form input#submit  {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 .text-primary {
   --tw-text-opacity: 1;
@@ -2247,21 +2257,6 @@ body.high-contrast .comment-form input#submit  {
   --tw-ring-color: rgb(255 255 255 / 0.5);
 }
 
-.focus-visible\:ring-2:focus-visible {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus-visible\:ring-primary:focus-visible {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(251 133 0 / var(--tw-ring-opacity, 1));
-}
-
-.focus-visible\:ring-offset-2:focus-visible {
-  --tw-ring-offset-width: 2px;
-}
-
 .group:hover .group-hover\:visible {
   visibility: visible;
 }
@@ -2296,6 +2291,10 @@ body.high-contrast .comment-form input#submit  {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
@@ -2347,10 +2346,6 @@ body.high-contrast .comment-form input#submit  {
 
   .md\:h-\[235px\] {
     height: 235px;
-  }
-
-  .md\:min-h-\[55rem\] {
-    min-height: 55rem;
   }
 
   .md\:min-h-\[60rem\] {
@@ -2405,9 +2400,16 @@ body.high-contrast .comment-form input#submit  {
     overflow: visible;
   }
 
-  .md\:rounded-l-\[0\.625rem\] {
-    border-top-left-radius: 0.625rem;
-    border-bottom-left-radius: 0.625rem;
+  .md\:rounded-b-none {
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+  }
+
+  @media (min-width: 768px) {
+
+    .md\:md\:rounded-tr-none {
+      border-top-right-radius: 0px;
+    }
   }
 
   .md\:border-t {
@@ -2460,20 +2462,12 @@ body.high-contrast .comment-form input#submit  {
     margin-top: -5rem;
   }
 
-  .lg\:mb-8 {
-    margin-bottom: 2rem;
-  }
-
   .lg\:ml-16 {
     margin-left: 4rem;
   }
 
   .lg\:ml-8 {
     margin-left: 2rem;
-  }
-
-  .lg\:mt-14 {
-    margin-top: 3.5rem;
   }
 
   .lg\:mt-20 {
@@ -2548,6 +2542,10 @@ body.high-contrast .comment-form input#submit  {
     width: 30%;
   }
 
+  .lg\:w-\[48rem\] {
+    width: 48rem;
+  }
+
   .lg\:w-\[52rem\] {
     width: 52rem;
   }
@@ -2562,18 +2560,6 @@ body.high-contrast .comment-form input#submit  {
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[50rem\] {
-    width: 50rem;
-  }
-
-  .lg\:w-\[45rem\] {
-    width: 45rem;
-  }
-
-  .lg\:w-\[48rem\] {
-    width: 48rem;
   }
 
   .lg\:max-w-2xl {
@@ -2594,6 +2580,10 @@ body.high-contrast .comment-form input#submit  {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
